[tool.poetry]
name = "oicu-conceptbase"
description = "Library to extract data from ICU databases"
version = "0.0.1"
license = "MIT"
authors = ["AIDH MS"]
readme = "README.md"
homepage = "https://github.com/aidh-ms/"
repository = "https://github.com/aidh-ms/oicu-extractor"
documentation = "https://github.com/aidh-ms/oicu-extractor/wiki"
keywords = ["API"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
Changelog = "https://github.com/aidh-ms/oicu-extractor"
Bugtracker = "https://github.com/aidh-ms/oicu-extractor/issues"

[tool.poetry.dependencies]
python = "~3.12"
numpy = "^2.1.2"
psycopg = {extras = ["binary"], version = "^3.1.19"}
SQLAlchemy = "^2.0.30"
pandas = "^2.2.2"
pandas-stubs = "^2.2.2.240514"
colorlog = "^6.8.2"
pandera = {extras = ["mypy"], version = "^0.19.3"}
pydantic = "^2.7.3"
python-dotenv = "^1.0.1"
PyYAML = "^6.0.2"
types-pyyaml = "^6.0.12.20240917"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pytest = "^8.0.2"
coverage = "^7.4.0"
pytest-cov = ">=4.1,<6.0"
ruff = ">=0.5.0,<0.7"
pytest-recording = "^0.13.1"
pytest-mock = "^3.14.0"
pytest-random-order = "^1.1.1"
jupyterlab = "^4.2.5"
coveralls = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
plugins = ["pandera.mypy"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = [
    "--cov-branch",
    "--cov",
    "--cov-report=xml",
    "--random-order",
]
